# base64

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  base64.nuspec
.github/workflows/: action-flow.yml  codeql-analysis.yml
cmake/: FindGTest.cmake
include/: base64.hpp  base64table.hpp
src/: CMakeLists.txt  base64decode.cpp  base64encode.cpp
test/: CMakeLists.txt  testbase64decode.cpp  testbase64encode.cpp  testentry.cpp
